Fix video width on mobile

--- a/css/layouts/_blog.scss
+++ b/css/layouts/_blog.scss
@@ -138,6 +138,7 @@
     & > iframe {
       margin: 2rem auto;
       display: block;
+      max-width: 100%;
     }
   }
 
